Fixed gapps arrow got placed over

--- a/style.css
+++ b/style.css
@@ -491,7 +491,7 @@ body {
 	cursor: pointer;
 	color: var(--darkColor-blue);
 	transition: transform 0.3s ease, right 0.3s ease;
-	z-index: 4;
+	z-index: 3;
 }
 
 .bookmark-sidebar {
